# learnOpenCV

./: .gitignore  .gitignore.swp  CMakeLists.txt  editCMakeProjectName.sh
chapter01/: README.md
chapter01/helloCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloCV  main.cpp
chapter02/: README.md
chapter02/basicOp/: CMakeLists.txt  basicOp  main.cpp
chapter02/inputArrayOp/: CMakeLists.txt  inputArrayOp  main.cpp
chapter02/matOp/: CMakeLists.txt  main.cpp  matOp
chapter02/scalarOp/: CMakeLists.txt  main.cpp  scalarOp
chapter03/: README.md
chapter03/drawing/: CMakeLists.txt  drawing  main.cpp
chapter03/keyboard/: CMakeLists.txt  keyboard  main.cpp
chapter03/mouse/: CMakeLists.txt  main.cpp  mouse
chapter03/storage/: CMakeLists.txt  main.cpp  mydata.json  storage
chapter03/trackbar/: CMakeLists.txt  main.cpp  trackbar
chapter03/utils/: CMakeLists.txt  main.cpp  utils
chapter03/video/: CMakeLists.txt  main.cpp  video
chapter04/: README.md
chapter04/brightness/: CMakeLists.txt  brightness  main.cpp
chapter04/contrast/: CMakeLists.txt  contrast  main.cpp
chapter04/histogram/: CMakeLists.txt  histogram  main.cpp
chapter05/: README.md
chapter05/arithmetic/: CMakeLists.txt  arithmetic  main.cpp
chapter05/logical/: logical  (+2 more)
chapter06/: README.md
chapter07/: README.md
chapter08/: README.md
chapter09/: README.md
chapter10/: README.md
chapter11/: README.md
chapter12/: README.md
chapter13/: README.md
chapter14/: README.md
chapter14/svmdigits/: CMakeLists.txt  main.cpp  svmdigits
chapter15/: README.md
(+97 files in other folders)
